// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Total /> should render the component as actual type 1`] = `
<Fragment>
  <TotalNumber
    type="actual"
    width={14}
  />
  <TotalNumber
    total={300}
  />
</Fragment>
`;

exports[`<Total /> should render the component as forecast type 1`] = `
<Fragment>
  <TotalNumber
    type="forecast"
    width={70}
  />
  <TotalNumber
    total={1500}
  />
</Fragment>
`;
